# cyxchat

./: .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/lib/ffi/: bindings.dart
app/lib/models/: contact.dart  conversation.dart  email_attachment.dart  email_folder.dart  email_message.dart  group.dart  group_member.dart  identity.dart  message.dart  models.dart
app/lib/providers/: chat_provider.dart  connection_provider.dart  contact_provider.dart  conversation_provider.dart  dht_provider.dart  dns_provider.dart  file_provider.dart  group_provider.dart  identity_provider.dart  mail_provider.dart  network_provider.dart  settings_provider.dart
app/lib/screens/: add_contact_screen.dart  chat_screen.dart  contacts_screen.dart  create_group_screen.dart  group_chat_screen.dart  group_info_screen.dart  home_screen.dart  mail_compose_screen.dart  mail_inbox_screen.dart  mail_read_screen.dart  onboarding_screen.dart  settings_screen.dart
app/lib/services/: chat_service.dart  database_service.dart  group_service.dart  identity_service.dart  mail_service.dart
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  CYXCHAT.md  C_EXTENSION.md  DATABASE.md  DNS.md  EMAIL.md  GATEWAY.md  LABELS.md  NAT-TRAVERSAL.md  PLAYIT_LIMITATION.md  README.md  SETUP.md  WORKFLOW.md
lib/: CMakeLists.txt
lib/include/cyxchat/: chat.h  connection.h  contact.h  cyxchat.h  dns.h  file.h  group.h  mail.h  presence.h  relay.h  types.h
lib/src/: chat.c  connection.c  contact.c  cyxchat.c  dns.c  file.c  group.c  mail.c  presence.c  relay.c
lib/tests/: test_chat.c  test_contact.c  test_dns.c  test_group.c  test_main.c
scripts/: build-app.ps1  build-app.sh  build-lib.ps1  build-lib.sh  dev.ps1  dev.sh
